
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u8 ;


 int os_snprintf (char*,int,char*,int const) ;

void printf_encode(char *txt, size_t maxlen, const u8 *data, size_t len)
{
 char *end = txt + maxlen;
 size_t i;

 for (i = 0; i < len; i++) {
  if (txt + 4 >= end)
   break;

  switch (data[i]) {
  case '\"':
   *txt++ = '\\';
   *txt++ = '\"';
   break;
  case '\\':
   *txt++ = '\\';
   *txt++ = '\\';
   break;
  case '\033':
   *txt++ = '\\';
   *txt++ = 'e';
   break;
  case '\n':
   *txt++ = '\\';
   *txt++ = 'n';
   break;
  case '\r':
   *txt++ = '\\';
   *txt++ = 'r';
   break;
  case '\t':
   *txt++ = '\\';
   *txt++ = 't';
   break;
  default:
   if (data[i] >= 32 && data[i] <= 127) {
    *txt++ = data[i];
   } else {
    txt += os_snprintf(txt, end - txt, "\\x%02x",
         data[i]);
   }
   break;
  }
 }

 *txt = '\0';
}
